list courses on home admin modal, fix some layout issues

--- a/themes/default/static/css/less/pages/admin.less
+++ b/themes/default/static/css/less/pages/admin.less
@@ -444,6 +444,7 @@
     }
   }
 
+
   #home {
     #courses {
       margin-top: 40px;
@@ -461,6 +462,7 @@
       .modal-body {
         .select-course {
           @media (max-width: 650px) { width: 100%; }
+          cursor: pointer;
           margin-bottom: 15px;
           .course-thumb {
             @media (min-width: 400px) and (max-width: 519px) { width: 40%; }
@@ -474,6 +476,7 @@
             overflow: hidden;
             cursor: pointer;
             transition : all 0.3s;
+            background-size: cover;
             .selected {
               opacity: 0;
               position: absolute;
@@ -483,9 +486,6 @@
               width: 24px;
               height: 24px;
               transition : all 0.3s;
-            }
-            img {
-              .img-responsive;
             }
           }
           &.active {
@@ -509,11 +509,13 @@
           .course-info {
             position: relative;
             float: left;
+            height: 95px;
             width: 50%;
+            overflow: hidden;
             padding: 0 0 0 15px;
             h3 {
               margin: 0;
-              font-size: 16px;
+              font-size: 15px;
             }
           }
         }
@@ -523,8 +525,7 @@
         padding-left: 20px;
       }
     }
-  }
-}
+  }}
 
 @keyframes blink-text-red
 {
